tests/NormalTests/paczka1/small_fuzzy/65712570.err
Error in line 3: Wb79CCvWm A122 34,7
Error in line 6: A767 A767 6,20
Error in line 1: rXnKO1m A122 20,7
Error in line 5: Wb79CCvWm S724 18,0
Error in line 2: 4shjTR0EZp A122 14,0
